# devgist

./: .gitignore  AGENTS.md  README.md  mise.toml  renovate.json
.github/: dependabot.yml  (+2 more)
workflows/crawler/: .env.example  .env.local  Dockerfile  Makefile  README.md  compose.yaml  config.toml  conftest.py  main.py  pyproject.toml
workflows/crawler/configs/: __init__.py
workflows/crawler/docs/adr/: 001-language-selection-for-crawler.md  001-python-over-go.md  002-secure-xml-parsing.md  _template.md
workflows/crawler/domain/: __init__.py  paper.py
workflows/crawler/libs/: __init__.py  http_utils.py  log.py
workflows/crawler/scripts/: build-push-image.sh
workflows/crawler/src/crawler/: main.py
workflows/crawler/src/crawler/domain/: repository.py
workflows/crawler/src/crawler/repository/: arxiv_repository.py  dblp_repository.py  semantic_scholar_repository.py  unpaywall_repository.py
workflows/crawler/src/crawler/utils/: __init__.py  http_utils.py  log.py
workflows/crawler/tests/: conftest.py  test_dblp.py  test_http_utils.py  test_libs.py  test_main.py  test_paper.py  test_semantic_scholar.py  test_unpaywall.py
workflows/crawler/tests/domain/: test_paper.py
workflows/crawler/tests/repository/: test_arxiv_repository.py  test_dblp_repository.py  test_gcs_datalake.py  test_semantic_scholar_repository.py  test_unpaywall_repository.py
workflows/crawler/tests/usecase/: test_fetch_conference_papers.py
workflows/crawler/tests/utils/: test_http_utils.py
workflows/crawler/usecase/: __init__.py  arxiv.py  dblp.py  semantic_scholar.py  unpaywall.py
(+108 files in other folders)
